parser.out
Grammar:

Rule 0     S' -> start
Rule 1     empty -> <empty>
Rule 2     start -> empty
Rule 3     start -> statement ; start
Rule 4     statement -> FOR ID = range block
Rule 5     statement -> WHILE expr block
Rule 6     statement -> IF expr block ELSE block
Rule 7     statement -> IF expr block
Rule 8     statement -> PRINT expr
Rule 9     statement -> expr
Rule 10    statement -> ID DASSIGN expr
Rule 11    statement -> ID TASSIGN expr
Rule 12    statement -> ID MASSIGN expr
Rule 13    statement -> ID PASSIGN expr
Rule 14    statement -> ID = expr
Rule 15    block -> { start }
Rule 16    block -> statement
Rule 17    expr -> EYE ( expr )
Rule 18    expr -> ONES ( expr )
Rule 19    expr -> ZEROS ( expr )
Rule 20    expr -> ID
Rule 21    expr -> [ outerlist ]
Rule 22    expr -> STRING
Rule 23    expr -> FLOAT
Rule 24    expr -> INT
Rule 25    expr -> expr '  [precedence=left, level=4]
Rule 26    expr -> ( expr )
Rule 27    expr -> expr NEQ expr  [precedence=nonassoc, level=1]
Rule 28    expr -> expr EQ expr  [precedence=nonassoc, level=1]
Rule 29    expr -> expr GEQ expr  [precedence=nonassoc, level=1]
Rule 30    expr -> expr > expr  [precedence=nonassoc, level=1]
Rule 31    expr -> expr LEQ expr  [precedence=nonassoc, level=1]
Rule 32    expr -> expr < expr  [precedence=nonassoc, level=1]
Rule 33    expr -> - expr  [precedence=right, level=5]
Rule 34    expr -> expr MDIVIDE expr  [precedence=left, level=3]
Rule 35    expr -> expr MTIMES expr  [precedence=left, level=3]
Rule 36    expr -> expr MMINUS expr  [precedence=left, level=2]
Rule 37    expr -> expr MPLUS expr  [precedence=left, level=2]
Rule 38    expr -> expr / expr  [precedence=left, level=3]
Rule 39    expr -> expr * expr  [precedence=left, level=3]
Rule 40    expr -> expr - expr  [precedence=left, level=2]
Rule 41    expr -> expr + expr  [precedence=left, level=2]
Rule 42    range -> INT : INT
Rule 43    outerlist -> [ innerlist ]
Rule 44    outerlist -> outerlist , [ innerlist ]
Rule 45    innerlist -> elem
Rule 46    innerlist -> innerlist , elem
Rule 47    elem -> STRING
Rule 48    elem -> FLOAT
Rule 49    elem -> INT

Unused terminals:

    RETURN
    CONTINUE
    BREAK

Terminals, with rules where they appear:

'                    : 25
(                    : 17 18 19 26
)                    : 17 18 19 26
*                    : 39
+                    : 41
,                    : 44 46
-                    : 33 40
/                    : 38
:                    : 42
;                    : 3
<                    : 32
=                    : 4 14
>                    : 30
BREAK                : 
CONTINUE             : 
DASSIGN              : 10
ELSE                 : 6
EQ                   : 28
EYE                  : 17
FLOAT                : 23 48
FOR                  : 4
GEQ                  : 29
ID                   : 4 10 11 12 13 14 20
IF                   : 6 7
INT                  : 24 42 42 49
LEQ                  : 31
MASSIGN              : 12
MDIVIDE              : 34
MMINUS               : 36
MPLUS                : 37
MTIMES               : 35
NEQ                  : 27
ONES                 : 18
PASSIGN              : 13
PRINT                : 8
RETURN               : 
STRING               : 22 47
TASSIGN              : 11
WHILE                : 5
ZEROS                : 19
[                    : 21 43 44
]                    : 21 43 44
error                : 
{                    : 15
}                    : 15

Nonterminals, with rules where they appear:

block                : 4 5 6 6 7
elem                 : 45 46
empty                : 2
expr                 : 5 6 7 8 9 10 11 12 13 14 17 18 19 25 26 27 27 28 28 29 29 30 30 31 31 32 32 33 34 34 35 35 36 36 37 37 38 38 39 39 40 40 41 41
innerlist            : 43 44 46
outerlist            : 21 44
range                : 4
start                : 3 15 0
statement            : 3 16


state 0

    (0) S' -> . start
    (2) start -> . empty
    (3) start -> . statement ; start
    (1) empty -> .
    (4) statement -> . FOR ID = range block
    (5) statement -> . WHILE expr block
    (6) statement -> . IF expr block ELSE block
    (7) statement -> . IF expr block
    (8) statement -> . PRINT expr
    (9) statement -> . expr
    (10) statement -> . ID DASSIGN expr
    (11) statement -> . ID TASSIGN expr
    (12) statement -> . ID MASSIGN expr
    (13) statement -> . ID PASSIGN expr
    (14) statement -> . ID = expr
    (17) expr -> . EYE ( expr )
    (18) expr -> . ONES ( expr )
    (19) expr -> . ZEROS ( expr )
    (20) expr -> . ID
    (21) expr -> . [ outerlist ]
    (22) expr -> . STRING
    (23) expr -> . FLOAT
    (24) expr -> . INT
    (25) expr -> . expr '
    (26) expr -> . ( expr )
    (27) expr -> . expr NEQ expr
    (28) expr -> . expr EQ expr
    (29) expr -> . expr GEQ expr
    (30) expr -> . expr > expr
    (31) expr -> . expr LEQ expr
    (32) expr -> . expr < expr
    (33) expr -> . - expr
    (34) expr -> . expr MDIVIDE expr
    (35) expr -> . expr MTIMES expr
    (36) expr -> . expr MMINUS expr
    (37) expr -> . expr MPLUS expr
    (38) expr -> . expr / expr
    (39) expr -> . expr * expr
    (40) expr -> . expr - expr
    (41) expr -> . expr + expr
    $end            reduce using rule 1 (empty -> .)
    FOR             shift and go to state 4
    WHILE           shift and go to state 6
    IF              shift and go to state 8
    PRINT           shift and go to state 9
    ID              shift and go to state 5
    EYE             shift and go to state 10
    ONES            shift and go to state 12
    ZEROS           shift and go to state 13
    [               shift and go to state 14
    STRING          shift and go to state 15
    FLOAT           shift and go to state 16
    INT             shift and go to state 17
    (               shift and go to state 11
    -               shift and go to state 18

    start                          shift and go to state 1
    empty                          shift and go to state 2
    statement                      shift and go to state 3
    expr                           shift and go to state 7

state 1

    (0) S' -> start .


state 2

    (2) start -> empty .
    $end            reduce using rule 2 (start -> empty .)
    }               reduce using rule 2 (start -> empty .)


state 3

    (3) start -> statement . ; start
    ;               shift and go to state 19


state 4

    (4) statement -> FOR . ID = range block
    ID              shift and go to state 20


state 5

    (10) statement -> ID . DASSIGN expr
    (11) statement -> ID . TASSIGN expr
    (12) statement -> ID . MASSIGN expr
    (13) statement -> ID . PASSIGN expr
    (14) statement -> ID . = expr
    (20) expr -> ID .
    DASSIGN         shift and go to state 21
    TASSIGN         shift and go to state 22
    MASSIGN         shift and go to state 23
    PASSIGN         shift and go to state 24
    =               shift and go to state 25
    '               reduce using rule 20 (expr -> ID .)
    NEQ             reduce using rule 20 (expr -> ID .)
    EQ              reduce using rule 20 (expr -> ID .)
    GEQ             reduce using rule 20 (expr -> ID .)
    >               reduce using rule 20 (expr -> ID .)
    LEQ             reduce using rule 20 (expr -> ID .)
    <               reduce using rule 20 (expr -> ID .)
    MDIVIDE         reduce using rule 20 (expr -> ID .)
    MTIMES          reduce using rule 20 (expr -> ID .)
    MMINUS          reduce using rule 20 (expr -> ID .)
    MPLUS           reduce using rule 20 (expr -> ID .)
    /               reduce using rule 20 (expr -> ID .)
    *               reduce using rule 20 (expr -> ID .)
    -               reduce using rule 20 (expr -> ID .)
    +               reduce using rule 20 (expr -> ID .)
    ;               reduce using rule 20 (expr -> ID .)
    ELSE            reduce using rule 20 (expr -> ID .)


state 6

    (5) statement -> WHILE . expr block
    (17) expr -> . EYE ( expr )
    (18) expr -> . ONES ( expr )
    (19) expr -> . ZEROS ( expr )
    (20) expr -> . ID
    (21) expr -> . [ outerlist ]
    (22) expr -> . STRING
    (23) expr -> . FLOAT
    (24) expr -> . INT
    (25) expr -> . expr '
    (26) expr -> . ( expr )
    (27) expr -> . expr NEQ expr
    (28) expr -> . expr EQ expr
    (29) expr -> . expr GEQ expr
    (30) expr -> . expr > expr
    (31) expr -> . expr LEQ expr
    (32) expr -> . expr < expr
    (33) expr -> . - expr
    (34) expr -> . expr MDIVIDE expr
    (35) expr -> . expr MTIMES expr
    (36) expr -> . expr MMINUS expr
    (37) expr -> . expr MPLUS expr
    (38) expr -> . expr / expr
    (39) expr -> . expr * expr
    (40) expr -> . expr - expr
    (41) expr -> . expr + expr
    EYE             shift and go to state 10
    ONES            shift and go to state 12
    ZEROS           shift and go to state 13
    ID              shift and go to state 27
    [               shift and go to state 14
    STRING          shift and go to state 15
    FLOAT           shift and go to state 16
    INT             shift and go to state 17
    (               shift and go to state 11
    -               shift and go to state 18

    expr                           shift and go to state 26

state 7

    (9) statement -> expr .
    (25) expr -> expr . '
    (27) expr -> expr . NEQ expr
    (28) expr -> expr . EQ expr
    (29) expr -> expr . GEQ expr
    (30) expr -> expr . > expr
    (31) expr -> expr . LEQ expr
    (32) expr -> expr . < expr
    (34) expr -> expr . MDIVIDE expr
    (35) expr -> expr . MTIMES expr
    (36) expr -> expr . MMINUS expr
    (37) expr -> expr . MPLUS expr
    (38) expr -> expr . / expr
    (39) expr -> expr . * expr
    (40) expr -> expr . - expr
    (41) expr -> expr . + expr
    ;               reduce using rule 9 (statement -> expr .)
    ELSE            reduce using rule 9 (statement -> expr .)
    '               shift and go to state 28
    NEQ             shift and go to state 29
    EQ              shift and go to state 30
    GEQ             shift and go to state 31
    >               shift and go to state 32
    LEQ             shift and go to state 33
    <               shift and go to state 34
    MDIVIDE         shift and go to state 35
    MTIMES          shift and go to state 36
    MMINUS          shift and go to state 37
    MPLUS           shift and go to state 38
    /               shift and go to state 39
    *               shift and go to state 40
    -               shift and go to state 41
    +               shift and go to state 42


state 8

    (6) statement -> IF . expr block ELSE block
    (7) statement -> IF . expr block
    (17) expr -> . EYE ( expr )
    (18) expr -> . ONES ( expr )
    (19) expr -> . ZEROS ( expr )
    (20) expr -> . ID
    (21) expr -> . [ outerlist ]
    (22) expr -> . STRING
    (23) expr -> . FLOAT
    (24) expr -> . INT
    (25) expr -> . expr '
    (26) expr -> . ( expr )
    (27) expr -> . expr NEQ expr
    (28) expr -> . expr EQ expr
    (29) expr -> . expr GEQ expr
    (30) expr -> . expr > expr
    (31) expr -> . expr LEQ expr
    (32) expr -> . expr < expr
    (33) expr -> . - expr
    (34) expr -> . expr MDIVIDE expr
    (35) expr -> . expr MTIMES expr
    (36) expr -> . expr MMINUS expr
    (37) expr -> . expr MPLUS expr
    (38) expr -> . expr / expr
    (39) expr -> . expr * expr
    (40) expr -> . expr - expr
    (41) expr -> . expr + expr
    EYE             shift and go to state 10
    ONES            shift and go to state 12
    ZEROS           shift and go to state 13
    ID              shift and go to state 27
    [               shift and go to state 14
    STRING          shift and go to state 15
    FLOAT           shift and go to state 16
    INT             shift and go to state 17
    (               shift and go to state 11
    -               shift and go to state 18

    expr                           shift and go to state 43

state 9

    (8) statement -> PRINT . expr
    (17) expr -> . EYE ( expr )
    (18) expr -> . ONES ( expr )
    (19) expr -> . ZEROS ( expr )
    (20) expr -> . ID
    (21) expr -> . [ outerlist ]
    (22) expr -> . STRING
    (23) expr -> . FLOAT
    (24) expr -> . INT
    (25) expr -> . expr '
    (26) expr -> . ( expr )
    (27) expr -> . expr NEQ expr
    (28) expr -> . expr EQ expr
    (29) expr -> . expr GEQ expr
    (30) expr -> . expr > expr
    (31) expr -> . expr LEQ expr
    (32) expr -> . expr < expr
    (33) expr -> . - expr
    (34) expr -> . expr MDIVIDE expr
    (35) expr -> . expr MTIMES expr
    (36) expr -> . expr MMINUS expr
    (37) expr -> . expr MPLUS expr
    (38) expr -> . expr / expr
    (39) expr -> . expr * expr
    (40) expr -> . expr - expr
    (41) expr -> . expr + expr
    EYE             shift and go to state 10
    ONES            shift and go to state 12
    ZEROS           shift and go to state 13
    ID              shift and go to state 27
    [               shift and go to state 14
    STRING          shift and go to state 15
    FLOAT           shift and go to state 16
    INT             shift and go to state 17
    (               shift and go to state 11
    -               shift and go to state 18

    expr                           shift and go to state 44

state 10

    (17) expr -> EYE . ( expr )
    (               shift and go to state 45


state 11

    (26) expr -> ( . expr )
    (17) expr -> . EYE ( expr )
    (18) expr -> . ONES ( expr )
    (19) expr -> . ZEROS ( expr )
    (20) expr -> . ID
    (21) expr -> . [ outerlist ]
    (22) expr -> . STRING
    (23) expr -> . FLOAT
    (24) expr -> . INT
    (25) expr -> . expr '
    (26) expr -> . ( expr )
    (27) expr -> . expr NEQ expr
    (28) expr -> . expr EQ expr
    (29) expr -> . expr GEQ expr
    (30) expr -> . expr > expr
    (31) expr -> . expr LEQ expr
    (32) expr -> . expr < expr
    (33) expr -> . - expr
    (34) expr -> . expr MDIVIDE expr
    (35) expr -> . expr MTIMES expr
    (36) expr -> . expr MMINUS expr
    (37) expr -> . expr MPLUS expr
    (38) expr -> . expr / expr
    (39) expr -> . expr * expr
    (40) expr -> . expr - expr
    (41) expr -> . expr + expr
    EYE             shift and go to state 10
    ONES            shift and go to state 12
    ZEROS           shift and go to state 13
    ID              shift and go to state 27
    [               shift and go to state 14
    STRING          shift and go to state 15
    FLOAT           shift and go to state 16
    INT             shift and go to state 17
    (               shift and go to state 11
    -               shift and go to state 18

    expr                           shift and go to state 46

state 12

    (18) expr -> ONES . ( expr )
    (               shift and go to state 47


state 13

    (19) expr -> ZEROS . ( expr )
    (               shift and go to state 48


state 14

    (21) expr -> [ . outerlist ]
    (43) outerlist -> . [ innerlist ]
    (44) outerlist -> . outerlist , [ innerlist ]
    [               shift and go to state 49

    outerlist                      shift and go to state 50

state 15

    (22) expr -> STRING .
    '               reduce using rule 22 (expr -> STRING .)
    NEQ             reduce using rule 22 (expr -> STRING .)
    EQ              reduce using rule 22 (expr -> STRING .)
    GEQ             reduce using rule 22 (expr -> STRING .)
    >               reduce using rule 22 (expr -> STRING .)
    LEQ             reduce using rule 22 (expr -> STRING .)
    <               reduce using rule 22 (expr -> STRING .)
    MDIVIDE         reduce using rule 22 (expr -> STRING .)
    MTIMES          reduce using rule 22 (expr -> STRING .)
    MMINUS          reduce using rule 22 (expr -> STRING .)
    MPLUS           reduce using rule 22 (expr -> STRING .)
    /               reduce using rule 22 (expr -> STRING .)
    *               reduce using rule 22 (expr -> STRING .)
    -               reduce using rule 22 (expr -> STRING .)
    +               reduce using rule 22 (expr -> STRING .)
    ;               reduce using rule 22 (expr -> STRING .)
    {               reduce using rule 22 (expr -> STRING .)
    FOR             reduce using rule 22 (expr -> STRING .)
    WHILE           reduce using rule 22 (expr -> STRING .)
    IF              reduce using rule 22 (expr -> STRING .)
    PRINT           reduce using rule 22 (expr -> STRING .)
    ID              reduce using rule 22 (expr -> STRING .)
    EYE             reduce using rule 22 (expr -> STRING .)
    ONES            reduce using rule 22 (expr -> STRING .)
    ZEROS           reduce using rule 22 (expr -> STRING .)
    [               reduce using rule 22 (expr -> STRING .)
    STRING          reduce using rule 22 (expr -> STRING .)
    FLOAT           reduce using rule 22 (expr -> STRING .)
    INT             reduce using rule 22 (expr -> STRING .)
    (               reduce using rule 22 (expr -> STRING .)
    ELSE            reduce using rule 22 (expr -> STRING .)
    )               reduce using rule 22 (expr -> STRING .)


state 16

    (23) expr -> FLOAT .
    '               reduce using rule 23 (expr -> FLOAT .)
    NEQ             reduce using rule 23 (expr -> FLOAT .)
    EQ              reduce using rule 23 (expr -> FLOAT .)
    GEQ             reduce using rule 23 (expr -> FLOAT .)
    >               reduce using rule 23 (expr -> FLOAT .)
    LEQ             reduce using rule 23 (expr -> FLOAT .)
    <               reduce using rule 23 (expr -> FLOAT .)
    MDIVIDE         reduce using rule 23 (expr -> FLOAT .)
    MTIMES          reduce using rule 23 (expr -> FLOAT .)
    MMINUS          reduce using rule 23 (expr -> FLOAT .)
    MPLUS           reduce using rule 23 (expr -> FLOAT .)
    /               reduce using rule 23 (expr -> FLOAT .)
    *               reduce using rule 23 (expr -> FLOAT .)
    -               reduce using rule 23 (expr -> FLOAT .)
    +               reduce using rule 23 (expr -> FLOAT .)
    ;               reduce using rule 23 (expr -> FLOAT .)
    {               reduce using rule 23 (expr -> FLOAT .)
    FOR             reduce using rule 23 (expr -> FLOAT .)
    WHILE           reduce using rule 23 (expr -> FLOAT .)
    IF              reduce using rule 23 (expr -> FLOAT .)
    PRINT           reduce using rule 23 (expr -> FLOAT .)
    ID              reduce using rule 23 (expr -> FLOAT .)
    EYE             reduce using rule 23 (expr -> FLOAT .)
    ONES            reduce using rule 23 (expr -> FLOAT .)
    ZEROS           reduce using rule 23 (expr -> FLOAT .)
    [               reduce using rule 23 (expr -> FLOAT .)
    STRING          reduce using rule 23 (expr -> FLOAT .)
    FLOAT           reduce using rule 23 (expr -> FLOAT .)
    INT             reduce using rule 23 (expr -> FLOAT .)
    (               reduce using rule 23 (expr -> FLOAT .)
    ELSE            reduce using rule 23 (expr -> FLOAT .)
    )               reduce using rule 23 (expr -> FLOAT .)


state 17

    (24) expr -> INT .
    '               reduce using rule 24 (expr -> INT .)
    NEQ             reduce using rule 24 (expr -> INT .)
    EQ              reduce using rule 24 (expr -> INT .)
    GEQ             reduce using rule 24 (expr -> INT .)
    >               reduce using rule 24 (expr -> INT .)
    LEQ             reduce using rule 24 (expr -> INT .)
    <               reduce using rule 24 (expr -> INT .)
    MDIVIDE         reduce using rule 24 (expr -> INT .)
    MTIMES          reduce using rule 24 (expr -> INT .)
    MMINUS          reduce using rule 24 (expr -> INT .)
    MPLUS           reduce using rule 24 (expr -> INT .)
    /               reduce using rule 24 (expr -> INT .)
    *               reduce using rule 24 (expr -> INT .)
    -               reduce using rule 24 (expr -> INT .)
    +               reduce using rule 24 (expr -> INT .)
    ;               reduce using rule 24 (expr -> INT .)
    {               reduce using rule 24 (expr -> INT .)
    FOR             reduce using rule 24 (expr -> INT .)
    WHILE           reduce using rule 24 (expr -> INT .)
    IF              reduce using rule 24 (expr -> INT .)
    PRINT           reduce using rule 24 (expr -> INT .)
    ID              reduce using rule 24 (expr -> INT .)
    EYE             reduce using rule 24 (expr -> INT .)
    ONES            reduce using rule 24 (expr -> INT .)
    ZEROS           reduce using rule 24 (expr -> INT .)
    [               reduce using rule 24 (expr -> INT .)
    STRING          reduce using rule 24 (expr -> INT .)
    FLOAT           reduce using rule 24 (expr -> INT .)
    INT             reduce using rule 24 (expr -> INT .)
    (               reduce using rule 24 (expr -> INT .)
    ELSE            reduce using rule 24 (expr -> INT .)
    )               reduce using rule 24 (expr -> INT .)


state 18

    (33) expr -> - . expr
    (17) expr -> . EYE ( expr )
    (18) expr -> . ONES ( expr )
    (19) expr -> . ZEROS ( expr )
    (20) expr -> . ID
    (21) expr -> . [ outerlist ]
    (22) expr -> . STRING
    (23) expr -> . FLOAT
    (24) expr -> . INT
    (25) expr -> . expr '
    (26) expr -> . ( expr )
    (27) expr -> . expr NEQ expr
    (28) expr -> . expr EQ expr
    (29) expr -> . expr GEQ expr
    (30) expr -> . expr > expr
    (31) expr -> . expr LEQ expr
    (32) expr -> . expr < expr
    (33) expr -> . - expr
    (34) expr -> . expr MDIVIDE expr
    (35) expr -> . expr MTIMES expr
    (36) expr -> . expr MMINUS expr
    (37) expr -> . expr MPLUS expr
    (38) expr -> . expr / expr
    (39) expr -> . expr * expr
    (40) expr -> . expr - expr
    (41) expr -> . expr + expr
    EYE             shift and go to state 10
    ONES            shift and go to state 12
    ZEROS           shift and go to state 13
    ID              shift and go to state 27
    [               shift and go to state 14
    STRING          shift and go to state 15
    FLOAT           shift and go to state 16
    INT             shift and go to state 17
    (               shift and go to state 11
    -               shift and go to state 18

    expr                           shift and go to state 51

state 19

    (3) start -> statement ; . start
    (2) start -> . empty
    (3) start -> . statement ; start
    (1) empty -> .
    (4) statement -> . FOR ID = range block
    (5) statement -> . WHILE expr block
    (6) statement -> . IF expr block ELSE block
    (7) statement -> . IF expr block
    (8) statement -> . PRINT expr
    (9) statement -> . expr
    (10) statement -> . ID DASSIGN expr
    (11) statement -> . ID TASSIGN expr
    (12) statement -> . ID MASSIGN expr
    (13) statement -> . ID PASSIGN expr
    (14) statement -> . ID = expr
    (17) expr -> . EYE ( expr )
    (18) expr -> . ONES ( expr )
    (19) expr -> . ZEROS ( expr )
    (20) expr -> . ID
    (21) expr -> . [ outerlist ]
    (22) expr -> . STRING
    (23) expr -> . FLOAT
    (24) expr -> . INT
    (25) expr -> . expr '
    (26) expr -> . ( expr )
    (27) expr -> . expr NEQ expr
    (28) expr -> . expr EQ expr
    (29) expr -> . expr GEQ expr
    (30) expr -> . expr > expr
    (31) expr -> . expr LEQ expr
    (32) expr -> . expr < expr
    (33) expr -> . - expr
    (34) expr -> . expr MDIVIDE expr
    (35) expr -> . expr MTIMES expr
    (36) expr -> . expr MMINUS expr
    (37) expr -> . expr MPLUS expr
    (38) expr -> . expr / expr
    (39) expr -> . expr * expr
    (40) expr -> . expr - expr
    (41) expr -> . expr + expr
    $end            reduce using rule 1 (empty -> .)
    }               reduce using rule 1 (empty -> .)
    FOR             shift and go to state 4
    WHILE           shift and go to state 6
    IF              shift and go to state 8
    PRINT           shift and go to state 9
    ID              shift and go to state 5
    EYE             shift and go to state 10
    ONES            shift and go to state 12
    ZEROS           shift and go to state 13
    [               shift and go to state 14
    STRING          shift and go to state 15
    FLOAT           shift and go to state 16
    INT             shift and go to state 17
    (               shift and go to state 11
    -               shift and go to state 18

    statement                      shift and go to state 3
    start                          shift and go to state 52
    empty                          shift and go to state 2
    expr                           shift and go to state 7

state 20

    (4) statement -> FOR ID . = range block
    =               shift and go to state 53


state 21

    (10) statement -> ID DASSIGN . expr
    (17) expr -> . EYE ( expr )
    (18) expr -> . ONES ( expr )
    (19) expr -> . ZEROS ( expr )
    (20) expr -> . ID
    (21) expr -> . [ outerlist ]
    (22) expr -> . STRING
    (23) expr -> . FLOAT
    (24) expr -> . INT
    (25) expr -> . expr '
    (26) expr -> . ( expr )
    (27) expr -> . expr NEQ expr
    (28) expr -> . expr EQ expr
    (29) expr -> . expr GEQ expr
    (30) expr -> . expr > expr
    (31) expr -> . expr LEQ expr
    (32) expr -> . expr < expr
    (33) expr -> . - expr
    (34) expr -> . expr MDIVIDE expr
    (35) expr -> . expr MTIMES expr
    (36) expr -> . expr MMINUS expr
    (37) expr -> . expr MPLUS expr
    (38) expr -> . expr / expr
    (39) expr -> . expr * expr
    (40) expr -> . expr - expr
    (41) expr -> . expr + expr
    EYE             shift and go to state 10
    ONES            shift and go to state 12
    ZEROS           shift and go to state 13
    ID              shift and go to state 27
    [               shift and go to state 14
    STRING          shift and go to state 15
    FLOAT           shift and go to state 16
    INT             shift and go to state 17
    (               shift and go to state 11
    -               shift and go to state 18

    expr                           shift and go to state 54

state 22

    (11) statement -> ID TASSIGN . expr
    (17) expr -> . EYE ( expr )
    (18) expr -> . ONES ( expr )
    (19) expr -> . ZEROS ( expr )
    (20) expr -> . ID
    (21) expr -> . [ outerlist ]
    (22) expr -> . STRING
    (23) expr -> . FLOAT
    (24) expr -> . INT
    (25) expr -> . expr '
    (26) expr -> . ( expr )
    (27) expr -> . expr NEQ expr
    (28) expr -> . expr EQ expr
    (29) expr -> . expr GEQ expr
    (30) expr -> . expr > expr
    (31) expr -> . expr LEQ expr
    (32) expr -> . expr < expr
    (33) expr -> . - expr
    (34) expr -> . expr MDIVIDE expr
    (35) expr -> . expr MTIMES expr
    (36) expr -> . expr MMINUS expr
    (37) expr -> . expr MPLUS expr
    (38) expr -> . expr / expr
    (39) expr -> . expr * expr
    (40) expr -> . expr - expr
    (41) expr -> . expr + expr
    EYE             shift and go to state 10
    ONES            shift and go to state 12
    ZEROS           shift and go to state 13
    ID              shift and go to state 27
    [               shift and go to state 14
    STRING          shift and go to state 15
    FLOAT           shift and go to state 16
    INT             shift and go to state 17
    (               shift and go to state 11
    -               shift and go to state 18

    expr                           shift and go to state 55

state 23

    (12) statement -> ID MASSIGN . expr
    (17) expr -> . EYE ( expr )
    (18) expr -> . ONES ( expr )
    (19) expr -> . ZEROS ( expr )
    (20) expr -> . ID
    (21) expr -> . [ outerlist ]
    (22) expr -> . STRING
    (23) expr -> . FLOAT
    (24) expr -> . INT
    (25) expr -> . expr '
    (26) expr -> . ( expr )
    (27) expr -> . expr NEQ expr
    (28) expr -> . expr EQ expr
    (29) expr -> . expr GEQ expr
    (30) expr -> . expr > expr
    (31) expr -> . expr LEQ expr
    (32) expr -> . expr < expr
    (33) expr -> . - expr
    (34) expr -> . expr MDIVIDE expr
    (35) expr -> . expr MTIMES expr
    (36) expr -> . expr MMINUS expr
    (37) expr -> . expr MPLUS expr
    (38) expr -> . expr / expr
    (39) expr -> . expr * expr
    (40) expr -> . expr - expr
    (41) expr -> . expr + expr
    EYE             shift and go to state 10
    ONES            shift and go to state 12
    ZEROS           shift and go to state 13
    ID              shift and go to state 27
    [               shift and go to state 14
    STRING          shift and go to state 15
    FLOAT           shift and go to state 16
    INT             shift and go to state 17
    (               shift and go to state 11
    -               shift and go to state 18

    expr                           shift and go to state 56

state 24

    (13) statement -> ID PASSIGN . expr
    (17) expr -> . EYE ( expr )
    (18) expr -> . ONES ( expr )
    (19) expr -> . ZEROS ( expr )
    (20) expr -> . ID
    (21) expr -> . [ outerlist ]
    (22) expr -> . STRING
    (23) expr -> . FLOAT
    (24) expr -> . INT
    (25) expr -> . expr '
    (26) expr -> . ( expr )
    (27) expr -> . expr NEQ expr
    (28) expr -> . expr EQ expr
    (29) expr -> . expr GEQ expr
    (30) expr -> . expr > expr
    (31) expr -> . expr LEQ expr
    (32) expr -> . expr < expr
    (33) expr -> . - expr
    (34) expr -> . expr MDIVIDE expr
    (35) expr -> . expr MTIMES expr
    (36) expr -> . expr MMINUS expr
    (37) expr -> . expr MPLUS expr
    (38) expr -> . expr / expr
    (39) expr -> . expr * expr
    (40) expr -> . expr - expr
    (41) expr -> . expr + expr
    EYE             shift and go to state 10
    ONES            shift and go to state 12
    ZEROS           shift and go to state 13
    ID              shift and go to state 27
    [               shift and go to state 14
    STRING          shift and go to state 15
    FLOAT           shift and go to state 16
    INT             shift and go to state 17
    (               shift and go to state 11
    -               shift and go to state 18

    expr                           shift and go to state 57

state 25

    (14) statement -> ID = . expr
    (17) expr -> . EYE ( expr )
    (18) expr -> . ONES ( expr )
    (19) expr -> . ZEROS ( expr )
    (20) expr -> . ID
    (21) expr -> . [ outerlist ]
    (22) expr -> . STRING
    (23) expr -> . FLOAT
    (24) expr -> . INT
    (25) expr -> . expr '
    (26) expr -> . ( expr )
    (27) expr -> . expr NEQ expr
    (28) expr -> . expr EQ expr
    (29) expr -> . expr GEQ expr
    (30) expr -> . expr > expr
    (31) expr -> . expr LEQ expr
    (32) expr -> . expr < expr
    (33) expr -> . - expr
    (34) expr -> . expr MDIVIDE expr
    (35) expr -> . expr MTIMES expr
    (36) expr -> . expr MMINUS expr
    (37) expr -> . expr MPLUS expr
    (38) expr -> . expr / expr
    (39) expr -> . expr * expr
    (40) expr -> . expr - expr
    (41) expr -> . expr + expr
    EYE             shift and go to state 10
    ONES            shift and go to state 12
    ZEROS           shift and go to state 13
    ID              shift and go to state 27
    [               shift and go to state 14
    STRING          shift and go to state 15
    FLOAT           shift and go to state 16
    INT             shift and go to state 17
    (               shift and go to state 11
    -               shift and go to state 18

    expr                           shift and go to state 58

state 26

    (5) statement -> WHILE expr . block
    (25) expr -> expr . '
    (27) expr -> expr . NEQ expr
    (28) expr -> expr . EQ expr
    (29) expr -> expr . GEQ expr
    (30) expr -> expr . > expr
    (31) expr -> expr . LEQ expr
    (32) expr -> expr . < expr
    (34) expr -> expr . MDIVIDE expr
    (35) expr -> expr . MTIMES expr
    (36) expr -> expr . MMINUS expr
    (37) expr -> expr . MPLUS expr
    (38) expr -> expr . / expr
    (39) expr -> expr . * expr
    (40) expr -> expr . - expr
    (41) expr -> expr . + expr
    (15) block -> . { start }
    (16) block -> . statement
    (4) statement -> . FOR ID = range block
    (5) statement -> . WHILE expr block
    (6) statement -> . IF expr block ELSE block
    (7) statement -> . IF expr block
    (8) statement -> . PRINT expr
    (9) statement -> . expr
    (10) statement -> . ID DASSIGN expr
    (11) statement -> . ID TASSIGN expr
    (12) statement -> . ID MASSIGN expr
    (13) statement -> . ID PASSIGN expr
    (14) statement -> . ID = expr
    (17) expr -> . EYE ( expr )
    (18) expr -> . ONES ( expr )
    (19) expr -> . ZEROS ( expr )
    (20) expr -> . ID
    (21) expr -> . [ outerlist ]
    (22) expr -> . STRING
    (23) expr -> . FLOAT
    (24) expr -> . INT
    (25) expr -> . expr '
    (26) expr -> . ( expr )
    (27) expr -> . expr NEQ expr
    (28) expr -> . expr EQ expr
    (29) expr -> . expr GEQ expr
    (30) expr -> . expr > expr
    (31) expr -> . expr LEQ expr
    (32) expr -> . expr < expr
    (33) expr -> . - expr
    (34) expr -> . expr MDIVIDE expr
    (35) expr -> . expr MTIMES expr
    (36) expr -> . expr MMINUS expr
    (37) expr -> . expr MPLUS expr
    (38) expr -> . expr / expr
    (39) expr -> . expr * expr
    (40) expr -> . expr - expr
    (41) expr -> . expr + expr
    '               shift and go to state 28
    NEQ             shift and go to state 29
    EQ              shift and go to state 30
    GEQ             shift and go to state 31
    >               shift and go to state 32
    LEQ             shift and go to state 33
    <               shift and go to state 34
    MDIVIDE         shift and go to state 35
    MTIMES          shift and go to state 36
    MMINUS          shift and go to state 37
    MPLUS           shift and go to state 38
    /               shift and go to state 39
    *               shift and go to state 40
    -               shift and go to state 60
    +               shift and go to state 42
    {               shift and go to state 61
    FOR             shift and go to state 4
    WHILE           shift and go to state 6
    IF              shift and go to state 8
    PRINT           shift and go to state 9
    ID              shift and go to state 5
    EYE             shift and go to state 10
    ONES            shift and go to state 12
    ZEROS           shift and go to state 13
    [               shift and go to state 14
    STRING          shift and go to state 15
    FLOAT           shift and go to state 16
    INT             shift and go to state 17
    (               shift and go to state 11
